--- a/One_Page_Website_Project/CSS/animations.css
+++ b/One_Page_Website_Project/CSS/animations.css
@@ -2,7 +2,7 @@
     MENU SECTION ANIMATION
 ----------------------------*/
 .menu {
-    color:#f00;
+    color:rgb(236, 18, 207);
     font: bold 12px/18px sans-serif;
     text-align: center;
     display: inline;
@@ -31,7 +31,7 @@
 }
 
 .menu li:hover {
-    color: #f00;
+    color: rgb(253, 248, 248);
     background-color: rgba(100, 65, 0, 0.3);
 }
 
@@ -47,7 +47,7 @@
     border-radius: 8px;
     padding: 1px;
     border: 1px solid #021a40;
-    background-color: #ff0;
+    background-color: rgb(244, 80, 195);
     box-shadow: 2px 2px 10px 0 rgba (0,0,0,0.7);
 }
 
@@ -103,5 +103,5 @@
 }
 
 .photo:hover img {
-    transform: scale(1:1);
+    transform: scale(1.1);
 }
