--- a/One_Page_Website_Project/CSS/shared.css
+++ b/One_Page_Website_Project/CSS/shared.css
@@ -24,7 +24,7 @@ nav {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 h1 {
@@ -33,7 +33,7 @@ h1 {
     font-size: 30px;
     text-transform: uppercase;
     text-align: center;
-    color: #e91c1c;
+    color: #f468cf;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.5);
 }
 
@@ -42,14 +42,14 @@ h1::after { /*This is the underline*/
     content: "";
     height: 2px;
     width: 150px;
-    background: #e91c1c;
+    background: #fbf9f9;
     margin: 5px auto 40px;
     box-shadow: 5px 2px 3px rgba(0,0,0,0.5);
 }
 
 h2 {
     line-height: 50px;
-    color: #e91c1c
+    color: #fcf9f9
 }
 
 h3 {
@@ -199,7 +199,7 @@ section {
     padding: 10px;
     border-radius: 8px;
     margin: 0px auto;
-    background-color: rgba(100, 65, 0, .3);
+    background-color: rgba(248, 243, 248, 0.3);
     box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.5);
 }
 
@@ -212,7 +212,7 @@ section {
     padding: 10px;
     border-radius: 8px;
     margin: 0px auto;
-    background-color: rgba(100, 65, 0, .3);
+    background-color: rgba(255, 104, 210, 0.3);
     box-shadow: -1px -1px 1px 0 rgba(0,0,0,1), 1px 2px 10px 0 rgba(0,0,0,0.5);
 }
 
@@ -249,17 +249,16 @@ section {
     font-size: 15px;
     outline: none;
     font-weight: 600;
-    color: #8D8E8f;
+    color: #fcf8fb;
     padding: 12px 12px;
     width: 70%;
-    border: 1px solid #808080;
+    border: 1px solid #f5f1f1;
     margin: 2% auto;
     border-radius: 7px;
-    background: rgb(227,222, 222);
+    background: rgb(252, 221, 244);
     box-shadow: 2px 3px 3px 0px rgba(0,0,0,0.3);
-    font-family: 'Raleway', sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
-
 .catering input[type="text"] {
     font-size: 15px;
     outline: none;
@@ -287,7 +286,7 @@ section {
 ----------------------------------*/
 #footer {
     background-color: rgba(100, 65, 0, .3);
-    color: #000;
+    color: #f8f3f3;
     text-shadow: 2px 2px 8px 0 rgba(0,0,0,1);
     padding: 20px 50px 20px 50px;
     text-align: right;
